# event_management_agent

./: .env_local  README.md  prompts.toml  pyproject.toml  start.ps1  start_server.bat
docs/: workflow.bpmn  workflow_with_errors.bpmn
event_management_agent/: config.py  toml_support.py
event_management_agent/server/: session.py  web_model.py  websocket_server.py
event_management_agent/service/: event_enhancement_func.py  event_search_service.py
event_management_agent/test/: test_event_search_service.py  test_websocket_session.py  web_session_provider.py
event_management_agent/tools/: event_search_tool.py  event_url_tool.py  request_processing_func.py  single_event_tool.py
event_management_agent/utils/: token_counter.py
